# 15-minute-data-extrapolation

./: .gitignore  LICENSE  README.md  generate_load.py  requirements.txt
examples/: sample_input.csv
generate-load-gui/: BUILD_EXE.md  README.md  generate-load-gui.spec  pyinstaller.spec  pyproject.toml  requirements.txt
generate-load-gui/src/: generate_load.py  main.py
generate-load-gui/src/config/: example_curve_points.json
generate-load-gui/src/gui/: app.py  controllers.py  main_window.py  widgets.py
generate-load-gui/src/tests/: test_integration.py
generate-load-gui/src/utils/: file_handlers.py
