[tool.poetry]
name = "generate-load-gui"
version = "0.1.0"
description = "A GUI application for generating synthetic load profiles."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3"
numpy = "^1.21"
openpyxl = "^3.0"
PyQt5 = "^5.15"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^2.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"